GNOME Bugzilla – Bug 639599
client ssh configuration breaks nautilus sftp connection
Last modified: 2013-11-15 15:01:01 UTC
I use screen in my everyday work. As I want the screen title to dynamically show the host I've sshed to I have added this lines to my ssh config file: Host * LocalCommand echo -ne '\ek%n\e\\' Unfortunately since I've made that change nautilus is not able to access any sftp site. I guess nautilus is confused by the localcommand configuration. I would expect Nautilus to ignore that kind of setting as they are intended to terminals only. see https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/696919
Created attachment 259808 [details] [review] sftp: Add "PermitLocalCommand no" to the OpenSSH commandline Add "PermitLocalCommand no" to the OpenSSH commandline to prevent user-configured commands running and interfering with the sftp session. This is what the OpenSSH sftp client does.
Review of attachment 259808 [details] [review]: Looks good!
Pushed to master as 100dbd9a53efc0dd18a6e0f9dc7083ed584ffbee. Thanks!