sftp: Add "PermitLocalCommand no" to the OpenSSH commandline

Add "PermitLocalCommand no" to the OpenSSH commandline to prevent
user-configured commands running and interfering with the sftp session.
This is what the OpenSSH sftp client does.

https://bugzilla.gnome.org/show_bug.cgi?id=639599